force-app/main/default/objects/CC_Arquitectura__c/CC_Arquitectura__c.object-meta.xml
<CustomObject>
    <label>Arquitectura</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Arquitectura</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Arquitecturas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>