force-app/main/default/objects/CC_Arquitectura__c/fields/CC_Centro__c.field-meta.xml
<CustomField>
    <fullName>CC_Centro__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Número de centro</inlineHelpText>
    <label>Centro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>