force-app/main/default/objects/CC_Arquitectura__c/fields/CC_CentroCaixaBank__c.field-meta.xml
<CustomField>
    <fullName>CC_CentroCaixaBank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Arquitectura asociada al centro</inlineHelpText>
    <label>Centro CaixaBank</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Centro CaixaBank</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Arquitecturas</relationshipLabel>
    <relationshipName>Arquitecturas</relationshipName>
    <type>Lookup</type>
</CustomField>