force-app/main/default/objects/CC_Arquitectura__c/fields/CC_Direccion__c.field-meta.xml
<CustomField>
    <fullName>CC_Direccion__c</fullName>
    <description>Dirección donde está ubicado el centro</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dirección</label>
    <length>255</length>
    <type>Text</type>
</CustomField>