force-app/main/default/objects/CC_Arquitectura__c/fields/CC_Empresa__c.field-meta.xml
<CustomField>
    <fullName>CC_Empresa__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Número de empresa a la que pertenece el centro</inlineHelpText>
    <label>Empresa</label>
    <length>100</length>
    <type>Text</type>
</CustomField>