force-app/main/default/objects/CC_Arquitectura__c/fields/CC_IpConexion__c.field-meta.xml
<CustomField>
    <fullName>CC_IpConexion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Dirección IP de la conexión</inlineHelpText>
    <label>IP Conexión</label>
    <length>100</length>
    <type>Text</type>
</CustomField>