force-app/main/default/objects/CC_Arquitectura__c/fields/CC_NombreCentro__c.field-meta.xml
<CustomField>
    <fullName>CC_NombreCentro__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Nombre del centro</inlineHelpText>
    <label>Nombre Centro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>