force-app/main/default/objects/CC_Arquitectura__c/fields/CC_NomTecnologia__c.field-meta.xml
<CustomField>
    <fullName>CC_NomTecnologia__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Tipología de conexión asociada al centro</inlineHelpText>
    <label>Nom Tecnología</label>
    <length>255</length>
    <type>Text</type>
</CustomField>