force-app/main/default/objects/CC_Arquitectura__c/fields/CC_NumCajero__c.field-meta.xml
<CustomField>
    <fullName>CC_NumCajero__c</fullName>
    <inlineHelpText>Número de cajeros que se han encontrado asociados al centro</inlineHelpText>
    <label>Num Cajeros</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>