force-app/main/default/objects/CC_Arquitectura__c/fields/CC_NumLan__c.field-meta.xml
<CustomField>
    <fullName>CC_NumLan__c</fullName>
    <inlineHelpText>Número de LAN que se han encontrado asociados al centro</inlineHelpText>
    <label>Num LAN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>