force-app/main/default/objects/CC_Arquitectura__c/fields/CC_NumPc__c.field-meta.xml
<CustomField>
    <fullName>CC_NumPc__c</fullName>
    <inlineHelpText>Número de PC (noTF) que se han encontrado asociados al centro</inlineHelpText>
    <label>Num Pc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>