force-app/main/default/objects/CC_Arquitectura__c/fields/CC_NumRouter__c.field-meta.xml
<CustomField>
    <fullName>CC_NumRouter__c</fullName>
    <inlineHelpText>Número de routers que se han encontrado asociados al centro</inlineHelpText>
    <label>Num Router</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>