force-app/main/default/objects/CC_Arquitectura__c/fields/CC_NumSitio__c.field-meta.xml
<CustomField>
    <fullName>CC_NumSitio__c</fullName>
    <inlineHelpText>Número de sitios que se han encontrado asociados al centro</inlineHelpText>
    <label>Num Sitios</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>