force-app/main/default/objects/CC_Arquitectura__c/fields/CC_NumSwitch__c.field-meta.xml
<CustomField>
    <fullName>CC_NumSwitch__c</fullName>
    <inlineHelpText>Número de switch que se han encontrado asociados al centro</inlineHelpText>
    <label>Num Switch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>