force-app/main/default/objects/CC_Arquitectura__c/fields/CC_Poblacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Poblacion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Población en la que está ubicado el centro</inlineHelpText>
    <label>Población</label>
    <length>255</length>
    <type>Text</type>
</CustomField>