force-app/main/default/objects/CC_Arquitectura__c/fields/CC_TipoCentro__c.field-meta.xml
<CustomField>
    <fullName>CC_TipoCentro__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Tipos de centro definidos en CTM</inlineHelpText>
    <label>Tipo Centro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>