force-app/main/default/objects/CC_Arquitectura__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CC_Activa__c</columns>
    <columns>CC_Centro__c</columns>
    <columns>CC_Empresa__c</columns>
    <columns>CC_TipoCentro__c</columns>
    <columns>CC_CentroCaixaBank__c</columns>
    <columns>CC_Conexion__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CC_NombreCentro__c</columns>
    <columns>CC_Provincia__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>